--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,36 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+html {
+  background: none;
+}
+body {
+	border-top: 6px solid #86134C;
+  > div {
+    background: none;
+    border-bottom: none;
+    > div {
+      background: none;
+      border-right: none;
+    }
+  }
+  > header{
+	  background-color: #FFF;
+  }
+}
+
+body > header h1 {
+	font-weight: bold;
+	letter-spacing: -0.05em;
+}
+
+body > header h1 a, body > header h1 a:visited, body > header h1 a:hover {
+	color: #4FCFC0;
+}
+
+body > nav {
+	background: none;
+	background-color: #f2f2f2;
+	border: none;
+	display: none;
+}
