--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,6 +28,8 @@ body > header h2 {
 
 body {
   line-height: 1.5em;
+  font-weight: 300;
+  font-size: 1em;
   color: $text-color;
   @extend .serif;
 }
@@ -37,7 +39,7 @@ h1 {
 }
 
 @media only screen and (min-width: 992px) {
-  body { font-size: 1.15em; }
+  body { font-size: 1em; }
   h1 { font-size: 2.6em; line-height: 1.2em; }
 }
 
