--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -21,7 +21,7 @@ body {
 
 body > header h1 {
 	font-weight: bold;
-	letter-spacing: -0.05em;
+	letter-spacing: -0.03em;
 }
 
 body > header h1 a, body > header h1 a:visited, body > header h1 a:hover {
@@ -33,4 +33,8 @@ body > nav {
 	background-color: #f2f2f2;
 	border: none;
 	display: none;
+}
+
+aside.sidebar li {
+	border: none;
 }
