--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -20,7 +20,7 @@ body {
 }
 
 a, a:visited {
-	color: #409F90;
+	color: #222;
 }
 
 article div.entry-content span{
@@ -28,7 +28,7 @@ article div.entry-content span{
 }
 
 a:hover{
-	color: saturate(#4FCFC0, 10);
+	color: darken(#4FCFC0, 9);
 }
 
 body > header h1 {
