--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -8,8 +8,8 @@
 //$nav-bg-front: image-url('noise.png');
 //$nav-bg-back: linear-gradient(lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11));
 //$sidebar-bg: desaturate(#eceff5, 8);
-$sidebar-link-color-hover: saturate(#4FCFC0, 10);
-$sidebar-link-color: darken(#4FCFC0, 9);
+$sidebar-link-color-hover: #10AFB5;
+$sidebar-link-color: #222;
 //$footer-bg: #ccc !default;
 //$footer-bg-front: image-url('noise.png');
 //$footer-bg-back: linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11));
