--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -6,7 +6,7 @@ html {
 }
 body {
 	max-width: 840px;
-	background-color: #F7F7EF;
+	background-color: #FFF;
   > div {
     background: none;
     border-bottom: none;
@@ -16,7 +16,7 @@ body {
     }
   }
   > header{
-	  background-color: #F7F7EF;
+	  background-color: #FFF;
   }
 }
 
