--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -99,6 +99,7 @@ aside.sidebar {
   padding: 0 $pad-min 1px;
   background-color: #EAEAE3;
   border-top: 1px solid #DEDED3;
+  border-bottom: 1px solid #DEDED3;
   @extend .group;
 }
 
