--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -47,7 +47,7 @@ body {
   -webkit-text-size-adjust: none;
   max-width: $max-width;
   position: relative;
-  margin: 0 auto;
+  margin: 0;
   > header, > nav, > footer, #content > article, #content > div > article, #content > div > section {
     @extend .group;
     padding-left: $pad-min;
