--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -33,6 +33,9 @@ layout: default
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
+	<a id="nate-speller-logo" href="/">
+	<img src="/images/nate-speller-logo.png" /></a>
+	
   {% if site.page_asides.size %}
     {% include_array page_asides %}
   {% else %}
