--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -34,6 +34,9 @@ single: true
 </div>
 {% unless page.sidebar == false %}
 <aside class="sidebar">
+	<a id="nate-speller-logo" href="/">
+	<img src="/images/nate-speller-logo.png" /></a>
+	
   {% if site.post_asides.size %}
     {% include_array post_asides %}
   {% else %}
