added bio to sidebar, sadly thats all

--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -6,5 +6,8 @@
         <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
+    <li class="sidebar-archive">
+      <a href="{{ root_url }}/blog/archives">Blog Archive</a>
+    </li>
   </ul>
 </section>
