--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -32,14 +32,5 @@ layout: default
 {% endif %}
 </div>
 {% unless page.sidebar == false %}
-<aside class="sidebar">
-	<a id="nate-speller-logo" href="/">
-	<img src="/images/nate-speller-logo.png" /></a>
-	
-  {% if site.page_asides.size %}
-    {% include_array page_asides %}
-  {% else %}
-    {% include_array default_asides %}
-  {% endif %}
-</aside>
+{% include sidebar.html %}
 {% endunless %}
