--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -45,6 +45,10 @@ body > header h1 a:hover{
 	color: saturate(#10AFB5, 10);
 }
 
+#content .blog-index article h1 a:hover {
+  text-decoration: none !important;
+}
+
 body > nav {
 	background: none;
 	background-color: #f2f2f2;
@@ -91,6 +95,13 @@ aside.sidebar section h1{
 	margin-right: 10px;
 }
 
+.sidebar-bio{
+  font-size: 0.8em;
+  margin: 30px 0px 32px;
+  text-align: center;
+  display: relative;
+}
+
 @media only screen and (min-width: 768px) {
 	#content{
 		padding-left: 280px;
@@ -115,6 +126,22 @@ aside.sidebar section h1{
 	}
 }
 
+@media only screen and (max-width: 767px) {
+  .sidebar-bio{
+    display: none;
+  }
+}
+
 article footer{
 	padding-left: 0px !important;
+}
+
+footer p.post-meta{
+  float: right;
+}
+
+aside.sidebar li.sidebar-archive{
+  border-top: 1px dotted #DDD;
+  margin-top: 10px;
+  padding: 14px 0px;
 }
