google analytics to nathanspeller.com

--- a/source/_includes/google_analytics.html
+++ b/source/_includes/google_analytics.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-36577128-1']);
-  _gaq.push(['_setDomainName', 'ogn8.com']);
+  _gaq.push(['_setAccount', 'UA-1407949-2']);
+  _gaq.push(['_setDomainName', 'nathanspeller.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
