--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -5,7 +5,7 @@ html {
   background: none;
 }
 body {
-	max-width: 840px;
+	max-width: 880px;
 	background-color: #FFF;
   > div {
     background: none;
@@ -144,4 +144,16 @@ aside.sidebar li.sidebar-archive{
   border-top: 1px dotted #DDD;
   margin-top: 10px;
   padding: 14px 0px;
+}
+
+article ul, article ol{
+  margin-left: 22px !important;
+  list-style-type: circle;
+}
+
+article img{
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border: none;
 }
