--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -6,8 +6,14 @@
         <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
-    <li class="sidebar-archive">
+  </ul>
+  <h1>Give me more</h1>
+  <ul>
+    <li>
       <a href="{{ root_url }}/blog/archives">Blog Archive</a>
+    </li>
+    <li>
+      <a href="{{ root_url }}/atom.xml">RSS</a>
     </li>
   </ul>
 </section>
