--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -8,9 +8,14 @@
   <meta name="author" content="{{ site.author }}">
 
   {% capture description %}{% if page.description %}{{ page.description }}{% else %}{{ content | raw_content }}{% endif %}{% endcapture %}
+  {% if page.url == "/index.html" %}
   <meta name="description" content="{{ site.description | strip_html | condense_spaces | truncate:150 }}">
+  {% else %}
+  <meta name="description" content="{{ description | strip_html | condense_spaces | truncate:150 }}">
+  {% endif %}
+  
   {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
-
+  
   <!-- http://t.co/dKP3o1e -->
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
