--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -7,17 +7,19 @@ single: true
 <article class="hentry" role="article">
   {% include article.html %}  
   <footer>
-    <!--
+    {% if false %}
     <p class="meta post-meta">
       {% include post/author.html %}
       {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}
       {% include post/categories.html %}
     </p>
-    -->
+    {% endif %}
+    
     {% unless page.sharing == false %}
       {% include post/sharing.html %}
     {% endunless %}
-<!--
+    
+    {% if false %}
     <p class="meta">
       {% if page.previous.url %}
         <a class="basic-alignment left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
@@ -25,7 +27,8 @@ single: true
       {% if page.next.url %}
         <a class="basic-alignment right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
       {% endif %}
-    </p>-->
+    </p>
+    {% endif %}
 
   </footer>
 </article>
