--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -71,6 +71,7 @@ hgroup{
 article header{
   background: none;
   padding-bottom: 0;
+  padding-top: 0;
 }
 
 blockquote{
@@ -173,6 +174,13 @@ article img{
   -moz-box-shadow: none;
   box-shadow: none;
   border: none;
+}
+
+article .meta-date{
+  font-size: 12px;
+  float: right;
+  color: #AAA;
+  text-transform: uppercase;
 }
 
 a:hover{
