bigger dates on index

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -53,6 +53,10 @@ body > header h1 a, body > header h1 a:visited {
   text-decoration: none !important;
 }
 
+#content .blog-index .meta-date{
+  font-size: 0.9em;
+}
+
 body > nav {
 	background: none;
 	background-color: #f2f2f2;
