added subscribe via email and feedburner

--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -13,7 +13,10 @@
       <a href="{{ root_url }}/blog/archives">Blog Archive</a>
     </li>
     <li>
-      <a href="{{ root_url }}/atom.xml">RSS</a>
+      <a href="{{ site.subscribe_email }}" title="subscribe via email">Subscribe via Email</a>
+    </li>
+    <li>
+      <a href="{{ site.subscribe_rss }}">RSS</a>
     </li>
   </ul>
 </section>
