--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -10,7 +10,10 @@
   <h1>Give me more</h1>
   <ul>
     <li>
-      <a href="{{ root_url }}/blog/archives">Blog Archive</a>
+      <a href="/">Home</a>
+    </li>
+    <li>
+      <a href="/">Blog Archive</a>
     </li>
     <li>
       <a href="{{ site.subscribe_email }}" title="subscribe via email">Subscribe via Email</a>
