--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -36,7 +36,18 @@ single: true
   </footer>
 </article>
 
-{% if site.disqus_short_name and page.comments == true %}
+  <div class="pagination">
+    {% if page.previous.url %}
+        <a class="basic-alignment left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
+      {% endif %}
+    {% if page.next.url %}
+        <a class="basic-alignment right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
+      {% endif %}
+  </div>
+
+
+
+{% if false and site.disqus_short_name and page.comments == true %}
   <section>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
