hide views in mobile views

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -186,7 +186,7 @@ aside.sidebar section h1{
   .landing-sidebar{
     display: none;
   }
-  .stars{
+  .stars, #visits{
     display: none;
   }
 }
