--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -129,6 +129,25 @@ aside.sidebar section h1{
   display: relative;
 }
 
+.stars{
+  display: inline-block;
+  width: 60px;
+  img{
+    margin:10px 0px;
+  }
+  position: absolute; top: 16px; left: -10px; text-align: right;
+}
+
+#visits{
+  font-size: 13px;
+  float: left;
+  position: relative;
+  bottom: 20px;
+  left: -60px;
+  color: #AAA;
+  margin-bottom: -30px;
+}
+
 @media only screen and (min-width: 768px) {
 	#content{
 		padding-left: 280px;
@@ -158,23 +177,6 @@ aside.sidebar section h1{
   #blog-archives{
     margin-left: -152px;
   }
-  .stars{
-    float: right;
-    display: inline-block;
-    width: 60px;
-    img{
-      margin:10px 0px;
-    }
-  }
-  #visits{
-    font-size: 13px;
-    float: right;
-    position: relative;
-    bottom: 20px;
-    right: 21px;
-    color: #AAA;
-    margin-bottom: -30px;
-  }
 }
 
 
@@ -186,7 +188,7 @@ aside.sidebar section h1{
   .landing-sidebar{
     display: none;
   }
-  .stars, #visits{
+  #visits{
     display: none;
   }
 }
@@ -226,4 +228,10 @@ article .meta-date{
 
 a:hover{
 	color: saturate(#dd4a38, 10) !important;
+}
+
+@media only screen and (max-width: 549px) {
+  .stars{
+    display: none;
+  }
 }
