--- a/source/_includes/archive_post.html
+++ b/source/_includes/archive_post.html
@@ -1,6 +1,10 @@
 {% capture category %}{{ post.categories | size }}{% endcapture %}
 <h1><a href="{{ root_url }}{{ post.url }}">{{post.title}}</a></h1>
-<time datetime="{{ post.date | datetime | date_to_xmlschema }}" pubdate>{{ post.date | date: "<span class='month'>%b</span> <span class='day'>%d</span> <span class='year'>%Y</span>"}}</time>
+<span class="stars">
+  {% for star in (1..post.stars) %}
+    <img src="/images/circle.png" />
+  {% endfor %}
+  </span>
 {% if category != '0' %}
 <footer>
   <span class="categories">posted in {{ post.categories | category_links }}</span>
